<resources>
    <string name="app_name">Spindown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="inline_preferences">inline_preferences</string>
    <string name="title_checkbox_preference">Title CheckBox Pref</string>
    <string name="summary_checkbox_preference">Summary Checkbox</string>
    <string name="dialog_based_preferences">Dialog Based Pref</string>
    <string name="title_edittext_preference">EditText</string>
    <string name="summary_edittext_preference">Summary EditText</string>
    <string name="dialog_title_edittext_preference">dialog title edittext</string>
    <string name="title_list_preference">title list pref</string>
    <string name="summary_list_preference">summ list ref</string>
    <string name="dialog_title_list_preference">dialog title</string>
    <string name="launch_preferences">launch pref</string>
    <string name="title_screen_preference">title screen pref</string>
    <string name="summary_screen_preference">sum screen pref</string>
    <string name="title_next_screen_toggle_preference">toggle</string>
    <string name="summary_next_screen_toggle_preference">sum next screen toggle</string>
    <string name="title_intent_preference">title ntent pref</string>
    <string name="summary_intent_preference">summary intent pref</string>
    <string name="preference_attributes">pref attrib</string>
    <string name="title_parent_preference">title parent pref</string>
    <string name="summary_parent_preference">summ parent pref</string>
    <string name="title_child_preference">title child pref</string>
    <string name="summary_child_preference">summ child pref</string>
    <string name="playerOne">Player One</string>
    <string name="longPress">Long-Click Inc/Dec</string>
    <string name="brightness">Brightness</string>
    <string name="playerTwo">Player Two</string>
    <string name="playerThree">Player Three</string>
    <string name="playerFour">Player Four</string>
    <string name="btn_right_increment">+</string>
    <string name="btn_left_decrement">-</string>
    <string name="life_counter_hint">[20]</string>
    <string name="defaultCounter">20 (default)</string>
    <string name="lifePoints">Life Points</string>
    <string name="thirtyCounter">30</string>
    <string name="fortyCounter">40</string>
    <string name="player1">Player 1</string>
</resources>



