<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customPref">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBrightness"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/brightness"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/radioGroup1"
        android:layout_toEndOf="@+id/radioGroup1"/>
    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_below="@+id/seekBrightness"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOne"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/seekBar1"
        android:layout_toRightOf="@+id/radioGroup1"
        android:layout_toEndOf="@+id/radioGroup1"
        android:layout_marginTop="38dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignLeft="@+id/save"
        android:layout_alignStart="@+id/save">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkbox Preference"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/checkBox1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longPress"
        android:layout_toRightOf="@+id/radioGroup1"
        android:layout_toEndOf="@+id/radioGroup1"
        android:layout_above="@+id/textView4"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Radio Button Preference"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/radio0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4">

    </RadioGroup>

    <Button
        android:id="@+id/save" style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_alignTop="@+id/close"
        android:layout_toLeftOf="@+id/close"
        android:layout_toStartOf="@+id/close"/>

    <Button
        android:id="@+id/close" style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginBottom="62dp"/>

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        android:layout_marginBottom="56dp"
        android:layout_above="@+id/save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        android:layout_above="@+id/radio2"
        android:layout_toRightOf="@+id/radioGroup1"
        android:layout_toEndOf="@+id/radioGroup1"/>

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="RadioButton"
        android:layout_above="@+id/radio1"
        android:layout_toRightOf="@+id/radioGroup1"
        android:layout_toEndOf="@+id/radioGroup1"/>

</RelativeLayout>