<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/three_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThreePlayerFragment">

    <!--TODO Reconfigure as RelativeLayout [Ex: four_player.xml]-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/background_player_one"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bkgd_rounded_p1"/>

        <ImageView
            android:id="@+id/background_player_two"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="170dp"
            android:background="@drawable/bkgd_rounded_p2"/>

        <ImageView
            android:id="@+id/background_player_three"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="170dp"
            android:background="@drawable/bkgd_rounded_p3"/>
    </LinearLayout>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:elevation="5dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP2"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewP1"
        android:elevation="5dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP3"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewP2"
        android:elevation="5dp"/>

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/leftP1"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"/>

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/rightP1"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/leftP2"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/leftP1" />

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/rightP2"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_alignTop="@+id/leftP2"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/leftP3"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/leftP2"/>

    <Button
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:id="@+id/rightP3"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_alignTop="@+id/leftP3"
        android:layout_alignParentEnd="true"/>

    <!--TODO Remove obsolete layout "Reset Button"-->
<!--    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/leftP2"
        android:layout_toEndOf="@+id/leftP2"/>-->

<!--TODO Figure out why Translucent Toolbar is FUBAR-->
    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="#10000000"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->



</RelativeLayout>
