<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/four_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FourPlayerFragment">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/background_player_one"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:background="@drawable/bkgd_rounded_p1"/>

        <ImageView
            android:id="@+id/background_player_two"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/background_player_one"
            android:background="@drawable/bkgd_rounded_p2"/>

        <ImageView
            android:id="@+id/background_player_three"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/background_player_one"
            android:background="@drawable/bkgd_rounded_p3"/>

        <ImageView
            android:id="@+id/background_player_four"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/background_player_two"
            android:layout_toEndOf="@id/background_player_three"
            android:background="@drawable/bkgd_rounded_p4"/>
    </RelativeLayout>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="75dp"
        android:elevation="5dp"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/rightP1"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/leftP1"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_below="@+id/rightP1"
        android:layout_marginStart="2dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP2"
        android:layout_toEndOf="@+id/textViewP1"
        android:layout_marginStart="90dp"
        android:layout_marginTop="75dp"
        android:elevation="5dp"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/rightP2"
        android:text="@string/btn_right_increment"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/rightP1"
        android:background="@drawable/btn_onpress"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/leftP2"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAlignment="gravity"
        android:background="@drawable/btn_onpress"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/rightP2"
        android:layout_toEndOf="@+id/leftP1"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP3"
        android:layout_below="@+id/textViewP1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="195dp"
        android:elevation="5dp"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/rightP3"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_below="@+id/leftP1"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/leftP3"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAlignment="gravity"
        android:background="@drawable/btn_onpress"
        android:layout_marginStart="2dp"
        android:layout_below="@+id/rightP3"/>


    <TextView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:hint="@string/life_counter_hint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textAlignment="center"
        android:id="@+id/textViewP4"
        android:layout_toEndOf="@+id/textViewP3"
        android:layout_below="@+id/textViewP2"
        android:layout_marginTop="195dp"
        android:layout_marginStart="90dp"
        android:elevation="5dp"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/rightP4"
        android:text="@string/btn_right_increment"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_below="@id/leftP2"
        android:layout_toEndOf="@+id/rightP3"/>

    <Button
        android:layout_height="130dp"
        android:layout_width="170dp"
        android:id="@+id/leftP4"
        android:text="@string/btn_left_decrement"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_onpress"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/rightP4"
        android:layout_toEndOf="@id/leftP3"/>

    <!--Reset Button-->
<!--    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/button"
        android:layout_below="@+id/textViewP4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>-->


</RelativeLayout>
